The last executed trackball operator can't be edited properly #37595

Closed
opened 2013-11-23 20:18:56 +01:00 by Florian Köberle · 17 comments

System
Operating System: Fedora Linux 19
Graphic Card: GeForce GTX 660 Ti/PCIe/SSE2

Blender Version
Broken: Blender 2.69 r60991
Worked: ?

Short description of error
The last executed trackball operator can't be edited properly

Exact steps for others to reproduce the error
Step 1: Start Blender with --factory-startup
Step 2: Rotate object once around x axix by 20 degree: Press - [x], - [x], - [x], - [x] and [Enter]
Step 3: Change the angle of the last executed operator to 10000
Step 4: Rotate with Trackball (press r two times or run the "Trackball" operator via search menu)
Step 5: Hover the angle values in the lastexecuted operator panel (in object tools sidebar): The values are 0 while hovered. Otherwise the first value is a very large value.
Step 6: Try changing the angles by entering values and dragging: It acts strangly: It seems to represent 2 values.

**System** Operating System: Fedora Linux 19 Graphic Card: GeForce GTX 660 Ti/PCIe/SSE2 **Blender Version** Broken: Blender 2.69 r60991 Worked: ? **Short description of error** The last executed trackball operator can't be edited properly **Exact steps for others to reproduce the error** Step 1: Start Blender with --factory-startup Step 2: Rotate object once around x axix by 20 degree: Press - [x], - [x], - [x], - [x] and [Enter] Step 3: Change the angle of the last executed operator to 10000 Step 4: Rotate with Trackball (press r two times or run the "Trackball" operator via search menu) Step 5: Hover the angle values in the lastexecuted operator panel (in object tools sidebar): The values are 0 while hovered. Otherwise the first value is a very large value. Step 6: Try changing the angles by entering values and dragging: It acts strangly: It seems to represent 2 values.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @florian-5

Added subscriber: @florian-5

Added subscriber: @Sergey

Added subscriber: @Sergey

Works fine here.

Did you try to reproduce the issue from the factory startup scene?

Works fine here. Did you try to reproduce the issue from the factory startup scene?

Added subscriber: @brecht

Added subscriber: @brecht

Couldn't reproduce either. Also might want to mention system information like operating system and graphics card, it may not seem relevant but sometimes it can still have an influence. But maybe in this case the particular screen setup or some transform settings or user preference is more likely to influence things.

Couldn't reproduce either. Also might want to mention system information like operating system and graphics card, it may not seem relevant but sometimes it can still have an influence. But maybe in this case the particular screen setup or some transform settings or user preference is more likely to influence things.

It seems the error only occurs if a constraint rotation is done first. I updated the steps to reproduce.

It seems the error only occurs if a constraint rotation is done first. I updated the steps to reproduce.

Can not reproduce with the updated steps even.

Can not reproduce with the updated steps even.

I tried again to repduce with my own steps and I failed first too. To reproduce it I had to start blender a few times. However after a few blender restarts I could reproduce every time after reloading the factory settings. Once I had blender in that state, I made a video of how to reproduce the bug: [F36441 ](http://developer.blender.org/F36441)

I tried again to repduce with my own steps and I failed first too. To reproduce it I had to start blender a few times. However after a few blender restarts I could reproduce every time after reloading the factory settings. Once I had blender in that state, I made a video of how to reproduce the bug: [[F36441](https://archive.blender.org/developer/F36441/trackballBug.ogv) ](http://developer.blender.org/F36441)

Are you using official build from blender.org? Also, is it 32 or 64 bits? Does it happen if you start blender --factory-start from the command line?

Also, please upload system-info.txt generated by Help -> System Info. This might give some clues as well.

Are you using official build from blender.org? Also, is it 32 or 64 bits? Does it happen if you start blender --factory-start from the command line? Also, please upload system-info.txt generated by `Help -> System Info`. This might give some clues as well.

I am using an offical blender-2.69-linux-glibc211-x86_64 build. Where does blender place the system-info.txt file? I will try " blender --factory-start", but it might take me a while to reproduce it again.

I am using an offical blender-2.69-linux-glibc211-x86_64 build. Where does blender place the system-info.txt file? I will try " blender --factory-start", but it might take me a while to reproduce it again.

I found now a quick way to get a freshly started blender (with --factory-start) into the error state. I updated the above description

I found now a quick way to get a freshly started blender (with --factory-start) into the error state. I updated the above description
Sergey Sharybin self-assigned this 2013-12-05 14:11:50 +01:00

Managed to reproduce weirdeness with updated steps! Will look into it.

Managed to reproduce weirdeness with updated steps! Will look into it.
Sergey Sharybin was unassigned by Campbell Barton 2013-12-12 10:24:59 +01:00
Campbell Barton self-assigned this 2013-12-12 10:24:59 +01:00

This issue was referenced by blender/blender-addons-contrib@2195dd32cc

This issue was referenced by blender/blender-addons-contrib@2195dd32cc7b2f4bf26c7d216cbaba32f82184da

This issue was referenced by 2195dd32cc

This issue was referenced by 2195dd32cc7b2f4bf26c7d216cbaba32f82184da

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 2195dd32cc.

Closed by commit 2195dd32cc.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37595
No description provided.