Fix T37595: Switching modal transform broke with trackball rotation.

Id properties may have different sized "values" array depending on the
transform operator